--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "fluent-ffmpeg": "^2.1.2",
+    "mongodb": "^4.12.1",
     "ytdl-core": "^4.11.2"
   }
 }
