--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.0.3",
     "fluent-ffmpeg": "^2.1.2",
     "mongodb": "^4.12.1",
+    "youtube-mp3-downloader": "^0.7.11",
     "ytdl-core": "^4.11.2"
   }
 }
